--- a/src/components/Navbar/navbar.styles.css
+++ b/src/components/Navbar/navbar.styles.css
@@ -18,7 +18,7 @@ ul{
 }
 .logo{
     height: 24px;
-    z-index: 2;
+    z-index: 2000;
 }
 .logo img{
     height: 100%;
@@ -30,6 +30,7 @@ ul{
     justify-content: center;
     align-items: center;
     margin: 0px;
+    font-size: 1.1rem;
 }
 .menu li{
     padding: 20px;
@@ -91,7 +92,7 @@ ul{
         padding: 5px;
         position: relative;
         user-select: none;
-        z-index: 2;
+        z-index: 3000;
     }
     nav .menu-icon .nav-icon{
         background-color: #ffffffcc;
@@ -143,7 +144,7 @@ ul{
         flex-direction: column;
         justify-content: center;
         padding-left: 40px;
-        z-index: 1;
+        z-index: 2000;
         display: none;
         animation: fade 0.3s;
 
@@ -152,7 +153,7 @@ ul{
         margin: 0px;
         padding: 0px;
     }
-    .menu-2 li a{
+    .menu-2 li {
         color: #ffffff;
         margin: 0px;
         padding: 20px 0px;
@@ -176,4 +177,19 @@ ul{
     100%{
         opacity: 1;
     }
+}
+
+.logo-svg{
+    background: #D3CCE3;  /* fallback for old browsers */
+background: -webkit-linear-gradient(to right, #E9E4F0, #D3CCE3);  /* Chrome 10-25, Safari 5.1-6 */
+background: linear-gradient(to right, #E9E4F0, #D3CCE3); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+
+}
+
+.menu li .active-link{
+    color: #08f89c;
+}
+
+.menu-2 li .active-link{
+    color: #02fd9d;
 }
