--- a/src/pages/About/about.css
+++ b/src/pages/About/about.css
@@ -1,6 +1,6 @@
 .about-component{
     margin: 55px 15vw;
-    color:#8892b0;
+    color:#f3f3f3;
     display: flex;
     justify-content: center;
     flex-direction: row;
@@ -16,8 +16,8 @@
 
 .right{
     flex: 1;
-    padding: 2rem;
-    padding-left: 5rem;
+    padding: 1rem;
+    padding-left: 1rem;
 }
 
 .intersets{
@@ -28,7 +28,7 @@
 @media only screen and (max-width: 600px) {
     .about-component{
         margin: 25px 10vw;
-        color:#8892b0;
+        color:#f3f3f3;
         display: flex;
         justify-content: center;
         flex-direction: column;
@@ -50,3 +50,96 @@
         padding-left: 0;
     }
 }
+
+
+.about-svg{
+    height: 15vh;
+  object-fit: contain;
+  margin: 1vw;
+}
+
+.svg-about-div{
+   
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: center;
+}
+
+
+
+
+
+
+.contact-button {
+    
+    display: inline-flex;
+    height: 3rem;
+    width: 10rem;
+    border: 2px solid #14d1d1;
+    margin: 20px 20px 20px 20px;
+    color: #17ffa6;
+    text-transform: uppercase;
+    text-decoration: none;
+    font-size: .8em;
+    letter-spacing: 1.5px;
+    align-items: center;
+    justify-content: center;
+    overflow: hidden;
+    margin-left: 45%;
+  }
+  
+  .contact-button  a {
+    color: #f3f3f3e8;
+    text-decoration: none;
+    letter-spacing: 1px;
+  }
+  
+  
+  #button-7 {
+    position: relative;
+    overflow: hidden;
+    cursor: pointer;
+  }
+  
+  #button-7 a {
+    position: relative;
+    left: 0;
+    transition: all .35s ease-Out;
+  }
+  
+  #dub-arrow {
+    width: 100%;
+    height: 100%;
+    background: #17ffa6;
+    left: -200px;
+    position: absolute;
+    padding: 0;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    transition: all .35s ease-Out;
+    bottom: 0;
+  }
+  
+  #button-7 img {
+    width: 30px;
+    height: auto;
+  }
+  
+  #button-7:hover #dub-arrow {
+    left: 0;
+  }
+  
+  #button-7:hover a {
+    left: 150px;
+  }
+  
+  @media screen and (min-width:1000px) {
+    h1 {
+      font-size: 2.2em;
+    }
+    #container {
+      width: 50%;
+    }
+  }
