--- a/src/pages/Home/home.styles.css
+++ b/src/pages/Home/home.styles.css
@@ -2,11 +2,143 @@ body{
     margin: 0px;
     padding: 0px;
     background-color:  #0a192f;
+    /* background: url(../../assets/letterh.jpg);
+    background-size: cover; */
     width:100%;
     height: 100vh;
     /* background-image: url(../../assets/bg.png); */
     background-position:top center;
     background-size: cover;
     background-repeat: no-repeat;
-    font-family: poppins;
+    font-family: "poppins";
+    overflow-x:hidden;
 }
+
+
+.effect-wrap .effect{
+    position: absolute;
+    z-index: -1;
+}
+.effect1{
+    width: 30px;
+    height: 30px;
+    border: 4px solid #CF4981;
+    right: 10%;
+    bottom: 10%;
+    animation: spin 10s linear infinite;
+}
+
+@keyframes spin{
+    0%{
+        transform: rotate(0deg);
+    }
+    100%{
+        transform: rotate(360deg  );
+    }
+}
+
+.effect2{
+    left: 3%;
+    bottom: 20%;
+    width: 40px;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    animation: topbounce 3s ease-in-out infinite;
+}
+.effect2 div{
+    height: 3px;
+    width: 3px;
+    background-color: turquoise;
+    margin: 0 3px 8px;
+}
+
+@keyframes topbounce{
+    0%,100%{
+        transform: translateY(0);
+    }
+    50%{
+        transform: translateY(25px);
+    }
+}
+
+.effect3{
+    height: 50px;
+    width: 50px;
+    border: 5px solid turquoise;
+    border-radius: 50%;
+    left: 50%;
+    top: -20px;
+    animation:leftbounce 3s ease-in-out infinite;
+}
+
+@keyframes leftbounce{
+    0%,100%{
+        transform: translateX(0);
+    }
+    50%{
+        transform: translateX(23px);
+    }
+
+}
+
+
+.effect4{
+    border-top: 30px solid transparent;
+    border-left: 30px solid rgb(244, 248, 10) ;
+    left: 30%;
+    top:20%; 
+    animation : spin 15s linear infinite;
+}
+.effect4::before{
+    content: '';
+    border-top: 30px solid transparent;
+    border-left: 30px solid rgb(244, 248, 10);
+    position: absolute;
+    opacity: 0.4;
+    left: -35px;
+     top:-24px;
+
+}
+
+.effect5{
+    height: 50px;
+    width: 50px;
+    right:10%;
+    top:30%;
+    display: flex;
+    justify-content: space-between;
+    border-radius: 50%;
+    overflow: hidden;
+    animation:spin 10s linear infinite;
+}
+.effect5 div{
+    width: 1px;
+    background-color: teal;
+}
+
+.effect6 ,.effect7{
+    
+    width:30px;
+    height:30px;
+    border-top:3px solid rgb(0, 255, 221);
+    border-left:3px solid rgb(0, 247, 255);
+    border-top-left-radius:20px;
+    right: 30%;
+    top: 20%;
+    animation: jumparound 5s linear infinite;
+    }
+
+    @keyframes jumparound{
+        0%,100%{
+            transform: skew(0deg);
+        }
+        50%{
+            transform: skew(20deg);
+        }
+    }
+
+    .effect7{
+        right: 40%;
+        top: 90%;
+    }
