--- a/src/components/Project-card/project.card.styles.css
+++ b/src/components/Project-card/project.card.styles.css
@@ -23,6 +23,7 @@
   line-height: 24px;
   font-weight: 700;
   margin-bottom: 4px;
+  z-index: 2;
   
 }
 
@@ -32,10 +33,11 @@
   font-weight: 400;
   line-height: 20px;
   color: #666666;
+  font-size: small;
 }
 .project-desc.small {
     margin-top: 1rem;
-    font-size:x-large;
+    font-size:1rem;
 }
 
 
@@ -53,23 +55,7 @@
   z-index: 0;
   overflow: hidden;
 }
-.card1:before {
-  content: "";
-  position: absolute;
-  z-index: -2;
-  top: -16px;
-  right: -16px;
-  background:#0a192f;
-  height: 32px;
-  width: 32px;
-  border-radius: 32px;
-  transform: scale(1.1);
-  transform-origin: 50% 50%;
-  transition: transform 0.25s ease-out;
-}
-.card1:hover:before {
-  transform: scale(100);
-}
+
 
 .card1:hover .project-desc {
   transition: all 0.3s ease-out;
@@ -80,10 +66,6 @@
   color: #ffffff;
 }
 
-.go-arrow{
-    display: flex;
-    flex-direction: row;
-}
 
 .logopro{
     width: 30px;
@@ -143,23 +125,6 @@
   z-index: 0;
   overflow: hidden;
 }
-.card1:before {
-  content: "";
-  position: absolute;
-  z-index: -2;
-  top: -16px;
-  right: -16px;
-  background:#0a192f;
-  height: 32px;
-  width: 32px;
-  border-radius: 32px;
-  transform: scale(1.1);
-  transform-origin: 50% 50%;
-  transition: transform 0.25s ease-out;
-}
-.card1:hover:before {
-  transform: scale(100);
-}
 
 .card1:hover .project-desc {
   transition: all 0.3s ease-out;
@@ -185,4 +150,44 @@
   transform: scale(1.1);
 }
 
+}  
+
+
+
+.icon{
+  font-size: 1.5rem;
+  color: rgb(253, 247, 247);
+  margin: 0.5rem;
+}
+
+.card1:hover .layout{
+transition: 1s ease-in-out;
+}
+
+.card1 .layout{
+  z-index:0;
+  position:absolute;
+  top:calc(100% - 2px);
+  height:100%;
+  width:100%;
+  left:0;
+  background:linear-gradient(to left , orange, tomato) transparent;
+  transition:0.5s;
+  
+}
+
+
+.card1:hover .project-name .project-desc .tech-logos .icon{
+  position: relative;
+  color:white;
+  z-index: 1000;
+}
+
+.card1 .project-name .project-desc .tech-logos .icon{
+  z-index:2; 
+  position:relative;
+}
+
+.card1:hover{
+  box-shadow:2px 5px 32px 5px #030d1f;
 }
