--- a/src/components/Title/title.styles.css
+++ b/src/components/Title/title.styles.css
@@ -84,6 +84,8 @@
   */
 .name-logo{
   position: absolute;
+  height: 60vh;
+  object-fit: contain;
   z-index:0;
   top: 30%;
   right: 30%;
@@ -94,14 +96,23 @@ background: #000428;  /* fallback for old browsers */
 background: -webkit-linear-gradient(to bottom, #004e92, #000428);  /* Chrome 10-25, Safari 5.1-6 */
 background: linear-gradient(to bottom, #004e92, #000428); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
 transition: 1s ease-in-out;
+animation: appear 2s ease-in-out ;
 }
 
 
 
-.name-logo:hover{
+/* .name-logo:hover{
   transform: translate3d(30px,-20px,0px);
-}
+} */
 
+@keyframes appear{
+   0%{
+       height: 0vh ;
+   }
+   100%{
+     height: 60vh;
+   }
+}
 
 
 
@@ -207,4 +218,10 @@ button:hover::after, button:focus::after {
     height: 100px;
     opacity: 0;
   }
+}
+
+.Typewriter{
+  font-size: 2.4rem;
+  color: #8892b0;
+  font-weight: 700;
 }
