--- a/src/pages/Home/home.styles.css
+++ b/src/pages/Home/home.styles.css
@@ -10,7 +10,7 @@ body{
     background-position:top center;
     background-size: cover;
     background-repeat: no-repeat;
-    font-family: "poppins";
+    /* font-family: "poppins"; */
     overflow-x:hidden;
 }
 
@@ -20,8 +20,8 @@ body{
     z-index: -1;
 }
 .effect1{
-    width: 30px;
-    height: 30px;
+    width: 20px;
+    height: 20px;
     border: 4px solid #CF4981;
     right: 10%;
     bottom: 10%;
@@ -38,9 +38,9 @@ body{
 }
 
 .effect2{
-    left: 3%;
-    bottom: 20%;
-    width: 40px;
+    left: 6%;
+    bottom: 5%;
+    width: 30px;
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
