--- a/src/components/Project-card/project.card.styles.css
+++ b/src/components/Project-card/project.card.styles.css
@@ -10,11 +10,14 @@
 }
 
 .tech-logos{
-    height: 8vh;
+    height: 7vh;
     width: 5vw;
     margin:.25rem;
     object-fit: contain;
+    
 }
+
+
 
 .project-name {
   color: #8892b0;
@@ -57,13 +60,15 @@
 }
 
 
-.card1:hover .project-desc {
+.card1:hover .project-desc,.tech-logos {
   transition: all 0.3s ease-out;
   color: rgba(255, 255, 255, 0.8);
+  opacity: 0.8;
 }
-.card1:hover .project-name {
+.card1:hover .project-name,.card1:hover .tech-logos {
   transition: all 0.3s ease-out;
   color: #ffffff;
+  opacity: 1;
 }
 
 
