--- a/src/components/progressBar/progress_bar.styles.css
+++ b/src/components/progressBar/progress_bar.styles.css
@@ -19,7 +19,7 @@
   }
   
   .progressBarContainer {
-    margin-left: 7rem;
+    margin-left: 7vw;
     width: 100%;
     height: 26px;
     height: 1em;
