--- a/src/pages/projects/projects.css
+++ b/src/pages/projects/projects.css
@@ -1,4 +1,5 @@
 .project-heading{
+    margin-top: 1rem;
     font-size: xx-large;
     text-align: center;
     color:#ccd6f6;
@@ -58,7 +59,8 @@
         display: flex;
         flex-direction: column;
         margin: 2rem;
-        width: 100vw;
+        /* width: 100vw; */
+        max-width: 80vw;
       
     }
 }
