--- a/src/components/Sidenav/sidenav.styles.css
+++ b/src/components/Sidenav/sidenav.styles.css
@@ -3,7 +3,7 @@
     width: 40px;
     position: fixed;
     bottom: 0;
-    right: 20px;
+    right: 2vw;
     left: auto;
     z-index: 10;
     visibility: visible;
