--- a/src/components/SlideAnimation/styles.css
+++ b/src/components/SlideAnimation/styles.css
@@ -13,6 +13,7 @@
   }
   .left-layer.active {
     left: 100%;
+    width: 0;
   }
   .left-layer--2 {
     background: #011425;
@@ -37,3 +38,5 @@
     background: #7f4a88;
     transition: all 0.9s cubic-bezier(0.645, 0.045, 0.355, 1);
   }
+
+
