--- a/src/components/Title/title.styles.css
+++ b/src/components/Title/title.styles.css
@@ -83,6 +83,7 @@
  }
   */
 .name-logo{
+  border: 5px solid #0a192f;
   position: absolute;
   height: 60vh;
   object-fit: contain;
@@ -97,6 +98,7 @@ background: -webkit-linear-gradient(to bottom, #004e92, #000428);  /* Chrome 10-
 background: linear-gradient(to bottom, #004e92, #000428); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
 transition: 1s ease-in-out;
 animation: appear 2s ease-in-out ;
+max-height: 386px;
 }
 
 
@@ -224,4 +226,18 @@ button:hover::after, button:focus::after {
   font-size: 2.4rem;
   color: #8892b0;
   font-weight: 700;
+}
+
+@media only screen and (max-width: 600px) {
+  .Typewriter{
+    font-size: 1.5rem;
+    color: #8892b0;
+    font-weight: 700;
+  }
+  .name-logo{
+    right: 8vw;
+    height: 60vh;
+    top: 27vh;
+    max-height: 386px;
+  }
 }
