--- a/src/components/Title/title.styles.css
+++ b/src/components/Title/title.styles.css
@@ -83,9 +83,9 @@
  }
   */
 .name-logo{
-  border: 5px solid #0a192f;
+  /* border: 5px solid #0a192f; */
   position: absolute;
-  height: 60vh;
+  height: 50vh;
   object-fit: contain;
   z-index:0;
   top: 30%;
@@ -93,15 +93,19 @@
   /* background: #000046;  fallback for old browsers */
 /* background: -webkit-linear-gradient(to right, #1CB5E0, #000046);  Chrome 10-25, Safari 5.1-6 */
 /* background: linear-gradient(to right, #1CB5E0, #000046); W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
-background: #000428;  /* fallback for old browsers */
-background: -webkit-linear-gradient(to bottom, #004e92, #000428);  /* Chrome 10-25, Safari 5.1-6 */
-background: linear-gradient(to bottom, #004e92, #000428); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
-transition: 1s ease-in-out;
-animation: appear 2s ease-in-out ;
+/* background-color: #000428;  
+background: -webkit-linear-gradient(to bottom, #004e92, #000428); 
+background: linear-gradient(to bottom, #004e92, #000428);  */
+transition: 3s ease-in-out;
+animation: appear 3s ease-in-out ;
 max-height: 386px;
 }
 
 
+#h_letter{
+  transition: 3s ease-in-out;
+  animation: appear 3s ease-in-out ;
+}
 
 /* .name-logo:hover{
   transform: translate3d(30px,-20px,0px);
@@ -109,10 +113,15 @@ max-height: 386px;
 
 @keyframes appear{
    0%{
-       height: 0vh ;
+      opacity: 0;
+       right:100%;
+       top:0%
    }
+ 
    100%{
-     height: 60vh;
+    opacity: 1;
+    right: 30%;
+    top:30%
    }
 }
 
